--- a/website/index.html
+++ b/website/index.html
@@ -23,7 +23,14 @@
   </nav>
   <article> &lt;My Article&gt;
     <section>&lt;Section One&gt;</section>
+      <div class="container">
+        <h1>This is my homework 3:</h1>
+        <p>The homework is about to create HTML file and CSS file with using external css style. This homework dues on October 8, 2017. I would get an extra credit for 10 points if I am possible to create a bootstrap layout.</p>
+      </div>
     <section>&lt;Section Two&gt;</section>
+    <div class="container">
+      <h1>Here is another section of the page</h1>
+      
   </article>
   <aside>&lt;Aside&gt;</aside>
   <footer>&lt;Footer&gt;</footer>
