--- a/website/flexbox.html
+++ b/website/flexbox.html
@@ -4,62 +4,59 @@
   <meta name="viewpoint" content=""width=device-width">
   <meta name="author" content="Visansaya Phamornchaisirikit">
   <title>My Homework 3</title>
-  <link href="css/float.css" rel="stylesheet"/>
+  <link href="css/flexbox.css" rel="stylesheet"/>
 </head>
 <body>
-<header>
-    <div class="container">
-        <div id="yimmie">
-            <h4>&lt;Header&gt;</h4>
+<div class="flexbox-container">
+    <div class="flexbox-container1">
+        <header class="my-header">
+            <a>&lt;Header&gt;</a>
+        </header>
+    </div>    
+    <div class="flexbox-container2">
+        <nav>
+            <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="static.html">Static Layout</a></li>
+	        <li><a href="absolute.html">Absolute Layout</a></li>
+            <li><a href="relative.html">Relative Layout</a></li>
+            <li><a href="float.html">Float Layout</a></li>
+            <li><a href="flexbox.html">Flexbox Layout (Extra Credit)</a></li>
+        </ul>
+        </nav>
+    </div>
+    <div class="flexbox-container3">
+        <div class ="flexbox-item1"> 
+         <article id="my-article">
+            <a>&lt;My Article&gt;</a>
+            </article>
+        </div>
+
+         <div class="flexbox-item2">
+            <article id="section-one">
+                <a>&lt;Section One&gt;</a>
+            </article> 
+        </div>
+
+        <div class="flexbox-item3">
+            <article id="section-two">
+                <a>&lt;Section Two&gt;</a>
+            </article>
+        </div>  
+    </div> 
+    <div class="flexbox-container4">
+        <div class="flexbox-item4">
+            <aside id="boxes">
+                <a>&lt;Aside&gt;</a>
+            </aside>   
         </div>
     </div>
-</header>
-
-  <nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="static.html">Static Layout</a></li>
-	    <li><a href="absolute.html">Absolute Layout</a></li>
-        <li><a href="relative.html">Relative Layout</a></li>
-        <li><a href="float.html">Float Layout</a></li>
-        <li><a href="flexbox.html">Flexbox Layout (Extra Credit)</a></li>
-    </ul>
-  </nav>
-   
-  <div class="relative">
-     <div class="absoluteleft">
-        <article id="my-article">
-            <div class ="container-1"> 
-                <h4>&lt;My Article&gt;</h4>
-            </div>
-        </article>
-
-        <article id="section-one">
-            <div class="container-2">
-                <h4>&lt;Section One&gt;</h4>
-            </div>
-        </article>
-
-        <article id="section-two">
-                <div class="container-2">
-                    <h4>&lt;Section Two&gt;</h4>
-                </div>
-        </article>
-     </div>
-
-    <div class="absoluteright"> 
-        <aside id="boxes">
-             <div class="container-3">
-                <div class="box">
-                    <h4>&lt;Aside&gt;</h4>
-                </div>
-            </div>
-        </aside>   
+    <div class="flexbox-container5">
+        <footer class="my-footer">
+            <a>&lt;Footer&gt;</a>
+        </footer>
     </div>
-  </div>
-<footer>
-        <h4>&lt;Footer&gt;</h4>
-</footer>
+</div>
 </body>
 </html>
 
